--- a/SPM/styles/style.css
+++ b/SPM/styles/style.css
@@ -66,7 +66,6 @@ h1 {
 
 /*top navigator*/
 .topNav{
-	width: 80%;
 	margin: auto;
 }
 
@@ -82,11 +81,8 @@ h1 {
     background-color: white;
 }
 #contact{
-    background: url("../images/background/p2.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background: url("../images/background/b2.jpg");
     background-size: cover;
-    height: 100vh;
 }
 #photography{
     background: url("../images/background/p3.jpg");
@@ -143,7 +139,7 @@ h1 {
 }
 
 #store{
-    background: url("../images/background/p5.jpg");
+    background: url("../images/background/b1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -186,14 +182,12 @@ nav ul.nav {
     nav ul.nav-fixed {
         position: fixed;
         top: 0;
-        width: 100%;
     }
     
     nav .brand {
         letter-spacing: 0.1em;
         text-transform: uppercase;
         font-size: 1.3em;
-        margin-left: 8%;
         position: absolute;
         left: 0;
     }
@@ -225,20 +219,18 @@ nav .dropdown-content {
     /* Use absolute for static menu */
     /*position: absolute;*/ 
     background-color: #1a5d91;
-    min-width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
 nav  li .dropdown-content a {
-    padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 
 nav .dropdown-content a:hover {
-    background-color: blue ;
+    background-color: black;
     color: #ffffff;
 
 }
@@ -471,4 +463,18 @@ label{
     width: 566px;
     padding-top: 2px;
 }
+#banner {
+    padding-top: 15vh;
+    background: black url("../images/background/p2.jpg") no-repeat fixed center;
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
+    color: black;
+    font-size: 3em;
+}
 
+#banner blockquote {
+    background: rgba(255, 255, 255, 0.6);
+    padding: 10%;
+    text-align: center;
+}
