--- a/SPM/styles/style.css
+++ b/SPM/styles/style.css
@@ -10,8 +10,8 @@ body{
 
 .container{
 	width: 80%;
+    height: 50%;
 	margin: auto;
-	overflow: hidden;
 }
 
 ul{
@@ -81,63 +81,17 @@ h1 {
     background-color: white;
 }
 #contact{
+    background: url("../images/background/b5.png");
+    background-size: cover;
+}
+#pawmed{
+    background: url("../images/background/b4.jpg");
+    background-size: cover;
+}
+#pawgroom{
     background: url("../images/background/b2.jpg");
     background-size: cover;
 }
-#photography{
-    background: url("../images/background/p3.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100vh;
-}
-#services{
-    background: url("../images/background/p4.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100vh;
-}
-#pawmed{
-    background: url("../images/background/p6.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100vh;
-}
-#pettyshoot{
-    background: url("../images/background/p7.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100vh;
-}
-
-#pawgroom{
-    background: url("../images/background/p10.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100vh;
-}
-
-
-#healthypaws{
-    background: url("../images/background/p8.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100vh;
-}
-
-#petvacay{
-    background: url("../images/background/p11.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100vh;
-}
-
 #store{
     background: url("../images/background/b1.jpg");
     background-repeat: no-repeat;
@@ -477,4 +431,91 @@ label{
     background: rgba(255, 255, 255, 0.6);
     padding: 10%;
     text-align: center;
+}
+body {
+    margin:0;
+    padding:0;
+}
+#header h1,
+#header h2,
+#header p {
+    margin-left:2%;
+    padding-right:2%;
+}
+#active2 #tab2,
+#active3 #tab3,
+#active4 #tab4,
+#active5 #tab5 {
+    font-weight:bold;
+    text-decoration:none;
+    color:#000;
+}
+#footer {
+    clear:both;
+    float:left;
+    width:100%;
+}
+#footer p {
+    margin-left:2%;
+    padding-right:2%;
+}
+
+/* Start of Column CSS */
+#container4 {
+    clear:left;
+    float:left;
+    width:100%;
+    overflow:hidden;
+    background:#b2f0f9; /* column 4 background colour */
+}
+#container3 {
+    clear:left;
+    float:left;
+    width:100%;
+    position:relative;
+    right:25%;
+    background:#89ffa2; /* column 3 background colour */
+}
+#container2 {
+    clear:left;
+    float:left;
+    width:100%;
+    position:relative;
+    right:25%;
+    background:#ffa7a7; /* column 2 background colour */
+}
+#container1 {
+    float:left;
+    width:100%;
+    position:relative;
+    right:25%;
+    background:#fff689; /* column 1 background colour */
+}
+#col1 {
+    float:left;
+    width:21%;
+    position:relative;
+    left:77%;
+    overflow:hidden;
+}
+#col2 {
+    float:left;
+    width:21%;
+    position:relative;
+    left:81%;
+    overflow:hidden;
+}
+#col3 {
+    float:left;
+    width:21%;
+    position:relative;
+    left:85%;
+    overflow:hidden;
+}
+#col4 {
+    float:left;
+    width:21%;
+    position:relative;
+    left:89%;
+    overflow:hidden;
 }
