--- a/SPM/styles/style.css
+++ b/SPM/styles/style.css
@@ -1,99 +1,120 @@
 /*index html*/
 body{
-    box-sizing: border-box;
-    line-height: 1.5;
-    padding: 0;
-    margin: 0;
-    background-color: white;
-    text-align: center;
+	box-sizing: border-box;
+	line-height: 1.5;
+	padding: 0;
+	margin: 0;
+	background-color: white;
+	text-align: center;
+    background: -webkit-linear-gradient(#94cfc9, #69b3c0, #4699b7, #20566e, #183641); /* For Safari 5.1 to 6.0 */
+        background: -o-linear-gradient(#94cfc9, #69b3c0, #4699b7, #20566e, #183641); /* For Opera 11.1 to 12.0 */
+        background: -moz-linear-gradient(#94cfc9, #69b3c0, #4699b7, #20566e, #183641); /* For Firefox 3.6 to 15 */
+        background: linear-gradient(to right, #94cfc9, #69b3c0, #4699b7, #20566e, #183641);
 }
 
 .container{
-    width: 80%;
-    height: 50%;
-    margin: auto;
+	width: 97.5%;
+	margin: auto;
+	overflow: hidden;
 }
 
 ul{
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 header{
-    background: black;
-    padding-top: 30px;
-    color: white;
-    min-height: 70px;
-    border-bottom: #059305 3px solid;
+	background: black;
+	padding-top: 30px;
+	color: white;
+	min-height: 70px;
+	border-bottom: #059305 3px solid;
 }
 nav {
     font-family: "Calibri";
 }
 
 header a{
-    font-size: 18px;
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
+	font-size: 18px;
+	color: white;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
 }
 
 header li{
-    float: left;
-    display: inline;
-    padding: 0 20px 0 20px;
+	float: left;
+	display: inline;
+	padding: 0 20px 0 20px;
 }
 
 header nav{
-    float: right;
-    margin-top: 10px;
+	float: right;
+	margin-top: 10px;
 }
 
 header .active a{
-    color: #059305;
-    font-weight: bold;
+	color: #059305;
+	font-weight: bold;
 }
 
 header a:hover{
-    color: #90EE90;
-    font-weight: bold;
+	color: #90EE90;
+	font-weight: bold;
 }
 
 h1 {
-    float: left;
-    font-color: black;
+    float: right;
 }
 
 /*top navigator*/
 .topNav{
-    margin: auto;
+	width: 80%;
+	margin: auto;
 }
 
 /*home page*/
 #home{
-    background: url("../images/background/dogCatwithOverlay.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 100vh;
+	background: url("../images/background/dogCatwithOverlay.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	height: 100vh;
 }
 #about{
     background-color: white;
 }
 #contact{
-    background: url("../images/background/b5.png");
+    background: url("../images/background/p2.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
+    height: 100vh;
+}
+
+#services{
+    background: url("../images/background/p4.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
 }
 #pawmed{
-    background: url("../images/background/b4.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
+    height: 100vh;
 }
+
 #pawgroom{
-    background: url("../images/background/b2.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
+    height: 100vh;
 }
+
 #store{
-    background: url("../images/background/b1.jpg");
+    background: url("../images/background/p5.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -136,12 +157,14 @@ nav ul.nav {
     nav ul.nav-fixed {
         position: fixed;
         top: 0;
+        width: 100%;
     }
     
     nav .brand {
         letter-spacing: 0.1em;
         text-transform: uppercase;
         font-size: 1.3em;
+        margin-left: 8%;
         position: absolute;
         left: 0;
     }
@@ -173,18 +196,20 @@ nav .dropdown-content {
     /* Use absolute for static menu */
     /*position: absolute;*/ 
     background-color: #1a5d91;
+    min-width: 180px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
 nav  li .dropdown-content a {
+    padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 
 nav .dropdown-content a:hover {
-    background-color: black;
+    background-color: blue ;
     color: #ffffff;
 
 }
@@ -265,177 +290,12 @@ h2 {
 }
 
 /* END OF OUR TEAM */
-#grooming {
-    font-family: "Calibri";
-    color: "black";
-    font-size: 20px;
+
+#notification {
+    float: left;
+    display: block;
 }
 
-/* CONTACT */
-body, html{
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    font-family: 'Sniglet', cursive;
-}
-h1{
-    font-weight: normal;
-    font-size: 4em;
-    font-family: 'Raleway', sans-serif;
-    margin: 0 auto;
-    margin-top: 30px;
-    width: 500px;
-    color: #F90;
-    text-align: center;
-
-}
-
-/* Animation webkit */
-@-webkit-keyframes myfirst
-{
-    0% {margin-left: -235px}
-    90% {margin-left: 100%;}
-    100% {margin-left: 100%;}
-}
-
-/* Animation */
-@keyframes myfirst
-{
-    0% {margin-left: -235px}
-    70% {margin-left: 100%;}
-    100% {margin-left: 100%;}
-}
-
-.fish{
-    background-image: url('http://www.geertjanhendriks.nl/codepen/form/fish.png');
-    width: 235px;
-    height: 104px;
-    margin-left: -235px;
-    position: absolute; 
-    animation: myfirst 24s;
-    -webkit-animation: myfirst 24s;
-    animation-iteration-count: infinite;
-    -webkit-animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    -webkit-animation-timing-function: linear;
-}
-
-#fish{
-    top: 120px;
-}
-
-#fish2{
-    top: 260px;
-    animation-delay: 12s;
-    -webkit-animation-delay: 12s;
-}
-
-
-header{
-    height: 160px;
-    background: url('http://www.geertjanhendriks.nl/codepen/form/golf.png') repeat-x bottom;
-}
-
-#form{
-    height: 100%;   
-    background-color: #98d4f3;
-    overflow: hidden;
-    position: relative;
-    
-}
-form{
-    margin: 0 auto;
-    width: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
-    padding-top: 40px;
-    color: white;
-    position: relative;
-    
-    
-}
-label, input, textarea{
-    display: block; 
-}
-input, textarea{
-    width: 500px;   
-    border: none;
-    border-radius: 20px;
-    outline: none;
-    font-family: 'Sniglet', cursive;
-    font-size: 1em;
-    color: #676767;
-    transition: border 0.5s;
-    -webkit-transition: border 0.5s;
-    -moz-transition: border 0.5s;
-    -o-transition: border 0.5s;
-    border: solid 3px #98d4f3;  
-    -webkit-box-sizing:border-box;
-    -moz-box-sizing:border-box;
-    box-sizing:border-box;
-    
-}
-input:focus, textarea:focus{
-    border: solid 3px #77bde0;  
-}
-
-textarea{
-    height: 50%;  
-    resize: none; 
-    overflow: auto;
-}
-input[type="submit"]{
-    background-color: #F90;
-    color: white;
-    height: 50px;
-    cursor: pointer;
-    margin-top: 30px;
-    font-size: 1.29em;
-    font-family: 'Sniglet', cursive;
-    -webkit-transition: background-color 0.5s;
-    -moz-transition: background-color 0.5s;
-    -o-transition: background-color 0.5s;
-    transition: background-color 0.5s;
-}
-input[type="submit"]:hover{
-    background-color: #e58f0e;
-    
-}
-label{
-    font-size: 1.5em;
-    margin-top: 20px;
-    padding-left: 20px;
-}
-.formgroup, .formgroup-active, .formgroup-error{
-    background-repeat: no-repeat;
-    background-position: right bottom;
-    background-size: 10.5%;
-    transition: background-image 0.7s;
-    -webkit-transition: background-image 0.7s;
-    -moz-transition: background-image 0.7s;
-    -o-transition: background-image 0.7s;
-    width: 566px;
-    padding-top: 2px;
-}
-#banner {
-    padding-top: 15vh;
-    background: black url("../images/background/p2.jpg") no-repeat fixed center;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
-    color: black;
-    font-size: 3em;
-}
-
-#banner blockquote {
-    background: rgba(255, 255, 255, 0.6);
-    padding: 10%;
-    text-align: center;
-}
-body {
-    margin:0;
-    padding:0;
-}
 #header h1,
 #header h2,
 #header p {
@@ -519,3 +379,59 @@ body {
     left:89%;
     overflow:hidden;
 }
+
+/* NOTIFICATION SLIDE PANEL */
+
+body {
+    font-family: "Lato", sans-serif;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+span {
+    float: left;
+    padding-top: 30px;
+}
+
+p {
+    color:white;
+}
+
+/* END OF NOTIFICATION SLIDE PANEL */
