--- a/AM/AM-final/styles/signas.css
+++ b/AM/AM-final/styles/signas.css
@@ -1,12 +1,10 @@
 .signasa {
     border: 0px solid black;
 	margin: auto;
+	margin-top: 5%;
+	padding: 2%;
     background-color: #DBF0F7;
-	padding-bottom: 100px;
-	padding-top: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
-	width: 1100px;
+	width: 50%;
 	border-radius: 20px;
 }
 
