--- a/AM/AM-final/styles/signas.css
+++ b/AM/AM-final/styles/signas.css
@@ -3,7 +3,7 @@
 	margin: auto;
 	margin-top: 5%;
 	padding: 2%;
-    background-color: #DBF0F7;
+    background-color: #f2f2f2;
 	width: 50%;
 	border-radius: 20px;
 }
